Improvements in the project in general

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "usernamehw.errorlens",
-    "rome.rome"
-  ]
+	"recommendations": ["usernamehw.errorlens", "biomejs.biome"]
 }
