--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "vitest",
 		"start": "node ./build/index.js",
 		"dev": "nodemon",
-		"build": "tsc",
-		"test:run": "vitest run",
-		"test-ui": "vitest --ui",
-		"test-c8": "vitest --coverage",
-		"prepare": "husky install",
-		"lint": "rome format . --write",
-		"check": "rome check ."
+		"build": "tsc"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,24 +16,19 @@
 			"src"
 		],
 		"ignore": [
-			"src/**/*.spec.ts"
+			"src/**/*.test.ts"
 		],
 		"ext": "ts",
 		"exec": "ts-node ./src/app/index.ts"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.17",
-		"@vitest/coverage-c8": "0.30.1",
-		"@vitest/ui": "0.30.1",
-		"husky": "8.0.3",
-		"nodemon": "2.0.22",
-		"rome": "12.0.0",
+		"@types/express": "^4.17.21",
+		"nodemon": "3.0.2",
 		"ts-node": "10.9.1",
-		"typescript": "5.0.4",
-		"vite": "4.3.3",
-		"vitest": "0.30.1"
+		"typescript": "5.3.3"
 	},
 	"dependencies": {
+		"@types/morgan": "1.9.9",
 		"express": "4.18.2"
 	}
 }
