Add config general to new client project

--- a/biome.json
+++ b/biome.json
@@ -7,6 +7,6 @@
 		}
 	},
 	"files": {
-		"ignore": ["./build/*.js", "./build/*.ts"]
+		"ignore": ["./build/*.js", "./build/*.ts", "./client/dist/*.js"]
 	}
 }
