--- a/server/package.json
+++ b/server/package.json
@@ -12,23 +12,17 @@
 	"author": "",
 	"license": "ISC",
 	"nodemonConfig": {
-		"watch": [
-			"src"
-		],
-		"ignore": [
-			"src/**/*.test.ts"
-		],
+		"watch": ["src"],
+		"ignore": ["src/**/*.test.ts"],
 		"ext": "ts",
 		"exec": "ts-node ./src/app/index.ts"
 	},
-	"devDependencies": {
-		"@types/express": "^4.17.21",
-		"nodemon": "3.0.2",
-		"ts-node": "10.9.1",
-		"typescript": "5.3.3"
-	},
 	"dependencies": {
+		"@types/express": "^4.17.21",
 		"@types/morgan": "1.9.9",
+		"typescript": "5.3.3",
+		"ts-node": "10.9.1",
+		"nodemon": "3.0.2",
 		"express": "4.18.2"
 	}
 }
