--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 2025:80
     volumes:
-      - ./client/:/usr/share/nginx/html/
+      - ./client/dist/:/usr/share/nginx/html/
 
   server:
     container_name: server
