Add init and reload command to client

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"prepare": "husky install",
 		"lint": "biome format . --write",
 		"check": "biome check . --apply",
-		"init": "npm i && cd server && npm i",
-		"reload": "rm -rf node_modules/ && rm -rf server/node_modules/"
+		"init": "npm i && cd server && npm i && cd .. && cd client && npm i",
+		"reload": "rm -rf node_modules/ && rm -rf server/node_modules/ && rm -rf client/node_modules/"
 	},
 	"keywords": [],
 	"author": "",
