--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,16 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react": "18.3.1",
+		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.37",
-		"@types/react-dom": "^18.2.15",
-		"@vitejs/plugin-react": "^4.2.0",
-		"autoprefixer": "^10.4.16",
-		"postcss": "^8.4.32",
-		"tailwindcss": "^3.3.6",
-		"vite": "^5.0.0"
+		"@types/react": "18.3.1",
+		"@types/react-dom": "18.3.0",
+		"@vitejs/plugin-react": "4.2.1",
+		"autoprefixer": "10.4.19",
+		"postcss": "8.4.38",
+		"tailwindcss": "3.4.3",
+		"vite": "5.2.10"
 	}
 }
