--- a/package.json
+++ b/package.json
@@ -2,22 +2,15 @@
 	"name": "dockermultipleproject",
 	"version": "1.0.0",
 	"description": "## Development Require ``` - Docker - Terminal (kitty 😉) ```",
-	"main": "index.js",
 	"scripts": {
-		"prepare": "husky install",
-		"lint": "biome format . --write",
-		"check": "biome check . --apply",
+		"lint": "biome check .",
+		"lint:fix": "biome check --apply .",
 		"init": "npm i && cd server && npm i && cd .. && cd client && npm i",
 		"reload": "rm -rf node_modules/ && rm -rf server/node_modules/ && rm -rf client/node_modules/"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
 	"devDependencies": {
-		"@biomejs/biome": "1.4.1",
-		"husky": "8.0.3",
-		"jav-blast-setup": "1.0.14",
-		"vite": "5.0.6",
-		"vitest": "1.0.2"
+		"@biomejs/biome": "1.7.2",
+		"husky": "9.0.11",
+		"jav-blast-setup": "1.0.21"
 	}
 }
