--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"description": "## Development Require ``` - Docker - Terminal (kitty 😉) ```",
 	"scripts": {
 		"lint": "biome check .",
-		"lint:fix": "biome check --apply .",
+		"lint:fix": "biome check --write .",
 		"init": "npm i && cd server && npm i && cd .. && cd client && npm i",
 		"reload": "rm -rf node_modules/ && rm -rf server/node_modules/ && rm -rf client/node_modules/"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.7.2",
+		"@biomejs/biome": "1.8.2",
 		"husky": "9.0.11",
-		"jav-blast-setup": "1.0.21"
+		"jav-blast-setup": "1.0.23"
 	}
 }
