--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,13 @@
 		"exec": "ts-node ./src/app/index.ts"
 	},
 	"dependencies": {
-		"@types/express": "^4.17.21",
-		"@types/morgan": "1.9.9",
-		"typescript": "5.4.5",
-		"ts-node": "10.9.2",
-		"nodemon": "3.1.0",
 		"express": "4.19.2"
+	},
+	"devDependencies": {
+		"@types/express": "4.17.21",
+		"@types/morgan": "1.9.9",
+		"typescript": "5.5.3",
+		"ts-node": "10.9.2",
+		"nodemon": "3.1.4"
 	}
 }
