--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,11 +1,22 @@
-FROM node:lts-alpine
+FROM node:lts-alpine AS builder
 
-WORKDIR /app
+WORKDIR /prepare
 
 COPY ./server/ ./
 
+RUN npm install
+RUN npm run build
+
+FROM node:lts-alpine
+
+WORKDIR /backend
+
+COPY --from=builder /prepare/build/ ./build/
+COPY --from=builder /prepare/package.json ./
+COPY --from=builder /prepare/package-lock.json ./
+
 RUN npm install --production
 
-CMD [ "npm", "run", "dev" ]
+CMD [ "npm", "run", "start" ]
 
-EXPOSE 2031
+EXPOSE 3000
