--- a/biome.json
+++ b/biome.json
@@ -3,10 +3,7 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true,
-			"suspicious": {
-				"noExplicitAny": "off"
-			}
+			"recommended": true
 		}
 	},
 	"files": {
