--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 	"scripts": {
 		"dev": "concurrently \"npm run dev --workspace=client\" \"npm run dev --workspace=server\"",
 		"lint": "biome check .",
-		"lint:fix": "biome check --write .",
+		"lint:fix": "biome check . --write",
 		"reload": "rm -rf node_modules/ && rm -rf server/node_modules/ && rm -rf client/node_modules/"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.3",
-		"concurrently": "8.2.2",
-		"husky": "9.0.11",
-		"jav-blast-setup": "1.0.25"
+		"@biomejs/biome": "1.9.4",
+		"concurrently": "9.1.2",
+		"husky": "9.1.7",
+		"jav-blast-setup": "1.0.30"
 	}
 }
