--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,14 @@
 {
 	"compilerOptions": {
-		"target": "ES2017",
+		"strict": true,
+		"target": "ES2022",
 		"outDir": "build/",
 		"module": "CommonJS",
 		"esModuleInterop": true,
-		"noImplicitAny": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 		"removeComments": true,
 		"forceConsistentCasingInFileNames": true,
-		"strict": true,
 		"skipLibCheck": true
 	},
 	"include": ["src/**/*.ts"],
